--- a/www.jumpscale.com/themes/landing/static/css/theme_venera_blue.css
+++ b/www.jumpscale.com/themes/landing/static/css/theme_venera_blue.css
@@ -125,6 +125,9 @@ textarea {
   overflow: auto;
   vertical-align: top;
 }
+.single-content a{
+  font-family: "Abel", "Helvetica Neue", Helvetica, Arial, sans-serif
+}
 @media print {
   * {
     text-shadow: none !important;
@@ -7881,7 +7884,7 @@ form.bs-docs-example {
   .bs-docs-sidenav > li > a {
     width: 190px \9;
     /* Override the previous IE8-9 hack */
-  
+
   }
 }
 /* Desktop
@@ -10565,7 +10568,7 @@ table.no-margin {
   }
 }
 @media (min-width: 980px) {
-  
+
 }
 @media (min-width: 768px) and (max-width: 979px) {
   .row {
