--- a/www.jumpscale.com/themes/landing/layouts/partials/head.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/head.html
@@ -12,12 +12,12 @@
   ga('create', 'UA-42531242-1', 'jumpscale.com');
   ga('send', 'pageview');
 
-</script><script  src='js/jquery-latest.js' type='text/javascript'></script>
-<link  href='css/theme_venera_blue.css' type='text/css' rel='Stylesheet'/>
-<link  href='css/custom.css' type='text/css' rel='Stylesheet'/>
-<link href="css/custom.css" rel="stylesheet">
+</script><script  src='/js/jquery-latest.js' type='text/javascript'></script>
+<link  href='/css/theme_venera_blue.css' type='text/css' rel='Stylesheet'/>
+<link  href='/css/custom.css' type='text/css' rel='Stylesheet'/>
+<link href="/css/custom.css" rel="stylesheet">
 <!--Carousel-->
-<link href="css/owl.carousel.css" rel="stylesheet">
-<link href="css/owl.theme.css" rel="stylesheet">
+<link href="/css/owl.carousel.css" rel="stylesheet">
+<link href="/css/owl.theme.css" rel="stylesheet">
 <!--Carousel End-->
 </head>
