--- a/www.jumpscale.com/themes/landing/layouts/partials/header.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/header.html
@@ -12,10 +12,10 @@
 <header id='header'>
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
-      <div class="container"> <a class='btn btn-navbar' data-target='.nav-collapse' data-toggle='collapse'> <span class='icon-bar'></span> <span class='icon-bar'></span> <span class='icon-bar'></span> </a> <a href="../www_jumpscale/" class="brand">JumpScale</a>
+      <div class="container"> <a class='btn btn-navbar' data-target='.nav-collapse' data-toggle='collapse'> <span class='icon-bar'></span> <span class='icon-bar'></span> <span class='icon-bar'></span> </a> <a href="/" class="brand">JumpScale</a>
         <div class="nav-collapse subnav-collapse collapse pull-right" id="top-navigation">
           <ul class='nav'>
-            <li class='active'> <a href="/">Home</a> </li>
+            <li class=''> <a href="/">Home</a> </li>
             <li class=''> <a href="#">Documentation</a> </li>
             <li class=''> <a href="#">Subscribe</a> </li>
             <li class=''> <a href="#">Contact</a> </li>
