--- a/www.jumpscale.com/themes/landing/layouts/partials/header.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/header.html
@@ -1,14 +1,3 @@
-<div class="navbar navbar-inverse navbar-fixed-top"  style="display:none;">
-  <div class="navbar-inner">
-    <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a>
-      <div class="nav-collapse collapse">
-        <ul class="nav">
-          <li><a href="/System">System</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
 <header id='header'>
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
@@ -16,9 +5,9 @@
         <div class="nav-collapse subnav-collapse collapse pull-right" id="top-navigation">
           <ul class='nav'>
             <li class=''> <a href="/">Home</a> </li>
-            <li class=''> <a href="#">Documentation</a> </li>
-            <li class=''> <a href="#">Subscribe</a> </li>
-            <li class=''> <a href="#">Contact</a> </li>
+            <li class=''> <a href="/Documentation">Documentation</a> </li>
+            <li class=''> <a href="/Subscribe">Subscribe</a> </li>
+            <li class=''> <a href="/contact-us">Contact</a> </li>
           </ul>
         </div>
       </div>
