--- a/www.jumpscale.com/themes/landing/layouts/partials/head.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/head.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>JumpScale</title>
+<link rel="shortcut icon" href="images/favicon.ico">
 <link href="http://fonts.googleapis.com/css?family=Abel:400|Oswald:300,400,700" media="all" rel="stylesheet" type="text/css" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -12,7 +13,8 @@
   ga('create', 'UA-42531242-1', 'jumpscale.com');
   ga('send', 'pageview');
 
-</script><script  src='/js/jquery-latest.js' type='text/javascript'></script>
+</script>
+<script  src='/js/jquery-latest.js' type='text/javascript'></script>
 <link  href='/css/theme_venera_blue.css' type='text/css' rel='Stylesheet'/>
 <link  href='/css/custom.css' type='text/css' rel='Stylesheet'/>
 <link href="/css/custom.css" rel="stylesheet">
