--- a/www.jumpscale.com/themes/landing/layouts/partials/header.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/header.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" href="../images/favicon.ico">
 <header id='header'>
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
