--- a/www.jumpscale.com/themes/landing/layouts/partials/footer.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/footer.html
@@ -16,6 +16,7 @@
               <div class="span6">
                 <ul class='footer-links'>
                   <li> <a href="/">Home</a> </li>
+                  <li> <a href="/about-us">About Us</a></li>
                   <li> <a href="/Documentation">Documentation</a> </li>
                   <li> <a href="/Subscribe">Subscribe</a> </li>
                   <li> <a href="/contact-us">Contact Us</a> </li>
