--- a/www.jumpscale.com/themes/landing/layouts/contact-us/single.html
+++ b/www.jumpscale.com/themes/landing/layouts/contact-us/single.html
@@ -1,76 +1,50 @@
 {{ partial "head.html" . }}
-<link rel="shortcut icon" href="../images/favicon.ico">
-<body class="collapsing_header">
+<body >
 {{ partial "header.html" . }}
-<div class="full_page_photo"> <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7224.728221205021!2d55.3842084!3d25.1233781!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x7b170a9aeabb253b!2sDubai+Silicon+Oasis!5e0!3m2!1sen!2seg!4v1427178182977"  style="border:0;width: 100%; height: 400px"></iframe></div>
-<div class="main">
-     {{ partial "breadcrumb.html" . }}
-     <section>
-         <div class="container">
-              <div class="row">
-                   <div class="office_address col-sm-4 col-md-4">
-                        <div class="team_member" style="padding-top: 0;">
-                          <img src="/images/logo.jpg" >
-                             <div class="team_social">
-                               <a href="{{ .Params.social1_link }}"><i class="fa fa-{{ .Params.social1_title }}"></i></a>
-                               <a href="{{ .Params.social2_link }}"><i class="fa fa-{{ .Params.social2_title }}"></i></a>
-                               <a href="{{ .Params.social3_link }}"><i class="fa fa-{{ .Params.social3_title }}"></i></a>
-                               <a href="{{ .Params.social4_link }}"><i class="fa fa-{{ .Params.social4_title }}"></i></a>
-                             </div>
-                             <address>
-                             <strong></strong><br>
-                             {{ range $element :=  .Params.address }}
-                                {{ $element }}<br>
-                             {{end}}
-                             <abbr title="Phone">P:</abbr> {{ .Params.phone }}
-                             </address>
-                             <address>
-                             <abbr title="Phone">E:</abbr> <a href="mailto:#">{{ .Params.email }}</a>
-                             </address>
-                        </div>
-                   </div>
-                   <div class="contact_form col-sm-8 col-md-8">
-                        <form name="contact_form" id="contact_form" action="//formspree.io/sacha@greenitglobe.com" method="POST">
-                             <input type="hidden" name="_next" value="/thanks" />
-                             <input type="hidden" name="_subject" value="Message from Midworldpro website" />
-                             <input type="text" name="_gotcha" style="display:none" />
-                             <div class="row">
-                                  <div class="col-sm-6 col-md-6">
-                                       <label>Name</label>
-                                       <input name="name" id="name" class="form-control" type="text" value="">
-                                  </div>
-                                  <div class="col-sm-6 col-md-6">
-                                       <label>E-mail</label>
-                                       <input name="_replyto" id="email" class="form-control" type="email" value="">
-                                  </div>
-                             </div>
-                             <div class="row">
-                                  <div class="col-sm-12 col-md-12">
-                                       <label>Message</label>
-                                       <textarea name="message" id="message" rows="8" class="form-control"></textarea>
-                                  </div>
-                                  <div class="col-sm-12 col-md-12"><br/>
-                                       <button id="submit_btn" type="submit" class="btn btn-primary" name="submit">Submit Message</button> <span id="notice" class="alert alert-warning alert-dismissable hidden" style="margin-left:20px;"></span> </div>
-                             </div>
-                        </form>
-                   </div>
-              </div>
+
+<div class="container docs-w">
+  <div class="row">
+    <div class="span3 bs-docs-sidebar">
+      <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200">
+				{{ range $element := where .Site.Pages "Section" "contact-us" }}
+					{{ if ne .RelPermalink "/thanks"}}
+	        	<li class=""><a href="{{ $element.RelPermalink }}"><i class="icon-chevron-right"></i> {{ $element.Title }}</a></li>
+					{{ end }}
+				{{ end }}
+      </ul>
+    </div>
+    <div class="span9 single-content">
+      <section id="thankyou">
+        <div class="page-header">
+          <h1>{{ .Title }}</h1>
+        </div>
+        {{ .Content }}
+        <form id="contact-form" action="//formspree.io/" method="POST" class="form-horizontal">
+          <input type="hidden" name="_next" value="/thanks" />
+          <input type="hidden" name="_subject" value="Message from JumpScale wesbite" />
+          <input type="text" name="_gotcha" style="display:none" />
+          <div class="control-group">
+            <input type="text" name="name" placeholder="Your Name" class="form-control">
           </div>
-     </section>
-		{{ partial "footer.html" . }}
+          <div class="control-group">
+            <input type="email" name="_replyto" placeholder="Your E-mail" class="form-control">
+          </div>
+          <div class="control-group">
+            <textarea rows="4" cols="50" name="message" placeholder="Your Message" class="form-control"></textarea>
+          </div>
+          <div class="">
+            <button  type="submit" value="Send" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </section>
+    </div>
+  </div>
 </div>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/jquery-1.9.0.min.js"><\/script>')</script>
-<script src="/twitter-bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="/js/modernizr.custom.48287.js"></script>
-<script src="/js/woothemes-FlexSlider-06b12f8/jquery.flexslider-min.js"></script>
-<script src="/js/prettyPhoto_3.1.5/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
-<script src="/js/isotope/jquery.isotope.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="/js/jquery.ui.totop.js"></script>
-<script type="text/javascript" src="/js/easing.js"></script>
-<script type="text/javascript" src="/js/wow.min.js"></script>
-<script type="text/javascript" src="/js/snap.svg-min.js"></script>
-<script type="text/javascript" src="/js/restart_theme.js"></script>
-<script type="text/javascript" src="/js/collapser.js"></script>
+{{ partial "footer.html" . }}
+<!--  <script src="js/jquery-1.10.1.min.js" type="text/javascript"></script>-->
+<script src="/js/bootstrap.js" type="text/javascript"></script>
+<script src="/js/prettify.js" type="text/javascript"></script>
+<script src="/js/lightbox.js" type="text/javascript"></script>
+<script src="/js/main.js" type="text/javascript"></script>
 </body>
 </html>
