--- a/www.jumpscale.com/themes/landing/layouts/partials/header.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/header.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" href="../images/favicon.ico">
 <header id='header'>
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
@@ -5,10 +6,9 @@
         <div class="nav-collapse subnav-collapse collapse pull-right" id="top-navigation">
           <ul class='nav'>
             <li class=''> <a href="/">Home</a> </li>
-            <li class=''> <a href="/about-us">About Us</a> </li>
             <li class=''> <a href="/Documentation">Documentation</a> </li>
             <li class=''> <a href="/Subscribe">Subscribe</a> </li>
-            <li class=''> <a href="/contact-us">Contact Us</a> </li>
+            <li class=''> <a href="/contact-us">Contact</a> </li>
           </ul>
         </div>
       </div>
