Update documentation URLs

--- a/www.jumpscale.com/themes/landing/layouts/partials/header.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/header.html
@@ -5,10 +5,10 @@
       <div class="container"> <a class='btn btn-navbar' data-target='.nav-collapse' data-toggle='collapse'> <span class='icon-bar'></span> <span class='icon-bar'></span> <span class='icon-bar'></span> </a> <a href="/" class="brand">JumpScale</a>
         <div class="nav-collapse subnav-collapse collapse pull-right" id="top-navigation">
           <ul class='nav'>
-            <li class=''> <a href="/">Home</a> </li>
-            <li class=''> <a href="/Documentation">Documentation</a> </li>
-            <li class=''> <a href="/Subscribe">Subscribe</a> </li>
-            <li class=''> <a href="/contact-us">Contact</a> </li>
+            <li class=''> <a href="/">Home</a></li>
+            <li> <a href="/about-us">About Us</a></li>
+            <li class=''> <a href="http://github.com/Jumpscale/jumpscale_core7/wiki" target="_blank">Documentation</a></li>
+            <li class=''> <a href="/contact-us">Contact</a></li>
           </ul>
         </div>
       </div>
