--- a/www.jumpscale.com/themes/landing/layouts/partials/home_page/team_services_box.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/home_page/team_services_box.html
@@ -34,7 +34,7 @@
                   </div>
                   <div class="testimonials-speech" id="testimonial4">
                     <p> <strong>{{ .Params.reem_fullname }}</strong> {{ .Params.reem_bio }}</p>
-                    <div class="speech-by"> Sc{{ .Params.reem_title }}</div>
+                    <div class="speech-by"> {{ .Params.reem_title }}</div>
                   </div>
                   <div class="testimonials-speech" id="testimonial5">
                     <p> <strong>{{ .Params.karim_fullname }}</strong> {{ .Params.karim_bio }}</p>
