--- a/www.jumpscale.com/themes/landing/layouts/partials/footer.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/footer.html
@@ -17,8 +17,7 @@
                 <ul class='footer-links'>
                   <li> <a href="/">Home</a> </li>
                   <li> <a href="/about-us">About Us</a></li>
-                  <li> <a href="/Documentation">Documentation</a> </li>
-                  <li> <a href="/Subscribe">Subscribe</a> </li>
+                  <li class=''> <a href="http://github.com/Jumpscale/jumpscale_core7/wiki" target="_blank">Documentation</a></li>
                   <li> <a href="/contact-us">Contact Us</a> </li>
                 </ul>
               </div>
