--- a/www.jumpscale.com/themes/landing/layouts/partials/footer.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/footer.html
@@ -16,7 +16,7 @@
               <div class="span6">
                 <ul class='footer-links'>
                   <li> <a href="/">Home</a> </li>
-                  <li class=''> <a href="http://github.com/Jumpscale/jumpscale_core7/wiki" target="_blank">Documentation</a></li>
+                  <li class=''> <a href="/documentation/Home">Documentation</a></li>
                   <li> <a href="/contact-us">Contact Us</a> </li>
                 </ul>
               </div>
