Change the font

--- a/www.jumpscale.com/themes/landing/static/css/theme_venera_blue.css
+++ b/www.jumpscale.com/themes/landing/static/css/theme_venera_blue.css
@@ -11309,3 +11309,6 @@ table.no-margin {
     overflow: visible !important;
   }
 }
+
+#thankyou { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 16px;}
+#contact { font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; }
