Documentaion link open in the same page

--- a/www.jumpscale.com/themes/landing/layouts/partials/home_page/intro_slider.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/home_page/intro_slider.html
@@ -8,7 +8,7 @@
               <h1 class='slider-header'>{{ .Params.slide1_title }}</h1>
               <h2 class='slider-sub-header'>{{ .Params.slide1_text }}</h2>
               <div class="cta">
-                <p><a href='{{ .Params.slide1_button_link }}' class="btn btn-cta" target="_blank">{{ .Params.slide1_button_text }}</a></p>
+                <p><a href='{{ .Params.slide1_button_link }}' class="btn btn-cta" >{{ .Params.slide1_button_text }}</a></p>
               </div>
             </div>
           </div>
