--- a/www.jumpscale.com/themes/landing/layouts/_default/single.html
+++ b/www.jumpscale.com/themes/landing/layouts/_default/single.html
@@ -1,9 +1,10 @@
 {{ partial "head.html" . }}
-<body >
+<body style="overflow: hidden;">
 {{ partial "header.html" . }}
 
 <div class="container docs-w">
   <div class="row">
+    {{if ne .Title "Documentation"}}
     <div class="span3 bs-docs-sidebar">
       <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200">
 				{{ range $element := where .Site.Pages "Section" "pages" }}
@@ -24,6 +25,8 @@
         {{ end }}
       </ul>
     </div>
+    {{end}}
+      {{if ne .Title "Documentation"}}
     <div class="span9 single-content">
       <section id="thankyou">
         <div class="page-header">
@@ -32,9 +35,18 @@
         {{ .Content }}
       </section>
     </div>
+      {{else}}
+      <style media="screen">
+iframe { width:100%; padding:0; border:0; }
+
+      </style>
+
+
+            <iframe id='iframe2' src="http://despiegk.gitbooks.io/jumpscale/content/" frameborder="0" style="overflow: hidden; height: 85%; width: 90%; position: absolute;" height="90%" width="85%"></iframe>
+
+      {{end}}
   </div>
 </div>
-{{ partial "footer.html" . }}
 <!--  <script src="js/jquery-1.10.1.min.js" type="text/javascript"></script>-->
 <script src="/js/bootstrap.js" type="text/javascript"></script>
 <script src="/js/prettify.js" type="text/javascript"></script>
