--- a/www.jumpscale.com/themes/landing/layouts/partials/header.html
+++ b/www.jumpscale.com/themes/landing/layouts/partials/header.html
@@ -6,7 +6,7 @@
         <div class="nav-collapse subnav-collapse collapse pull-right" id="top-navigation">
           <ul class='nav'>
             <li class=''> <a href="/">Home</a></li>
-            <li class=''> <a href="/documentation/Home">Documentation</a></li>
+            <li class=''> <a href="/documentation">Documentation</a></li>
             <li class=''> <a href="/contact-us">Contact</a></li>
           </ul>
         </div>
