--- a/www.jumpscale.com/themes/landing/layouts/_default/single.html
+++ b/www.jumpscale.com/themes/landing/layouts/_default/single.html
@@ -1,3 +1,21 @@
+<style media="screen">
+        body {
+          position: relative;
+        }
+        #iframe2 {
+            width: 1180px;
+            overflow: hidden; 
+            position: absolute;
+            height: 108%;
+            top: 78px;
+        }
+        @media (max-width: 1200px) {
+           #iframe2 {
+            width: 934px;
+            top: 78px;
+          }
+        }
+</style>
 {{ partial "head.html" . }}
 <body style="overflow: hidden;">
 {{ partial "header.html" . }}
@@ -36,14 +54,7 @@
       </section>
     </div>
       {{else}}
-      <style media="screen">
-iframe { width:100%; padding:0; border:0; }
-
-      </style>
-
-
-            <iframe id='iframe2' src="http://despiegk.gitbooks.io/jumpscale/content/" frameborder="0" style="overflow: hidden; height: 85%; width: 90%; position: absolute;" height="90%" width="85%"></iframe>
-
+      <iframe id='iframe2' src="http://despiegk.gitbooks.io/jumpscale/content/" frameborder="0"></iframe>
       {{end}}
   </div>
 </div>
