--- a/www.jumpscale.com/themes/landing/layouts/_default/single.html
+++ b/www.jumpscale.com/themes/landing/layouts/_default/single.html
@@ -1,6 +1,7 @@
 <style media="screen">
         body {
           position: relative;
+          height: 77%;
         }
         #iframe2 {
             width: 1180px;
@@ -8,6 +9,7 @@
             position: absolute;
             height: 108%;
             top: 78px;
+
         }
         @media (max-width: 1200px) {
            #iframe2 {
