--- a/www.jumpscale.com/themes/landing/layouts/_default/single.html
+++ b/www.jumpscale.com/themes/landing/layouts/_default/single.html
@@ -1,8 +1,7 @@
 <style media="screen">
-        body {
-          position: relative;
-          height: 77%;
-        }
+body {
+    margin-bottom: 0 !important;
+}
         
         .docButton {
            padding: 10px 17px !important;
@@ -38,13 +37,13 @@
       <div style="height: 100%;" class="carousel-inner slider-w">
         <div class="divWrap">
          <i class="icon-book bigger"></i><br>
-          <button onclick="location.href='https://www.gitbook.com/book/despiegk/jumpscale/details';" type="button" class="btn btn-default docButton" aria-label="Left Align">
+          <button onclick="window.open('https://www.gitbook.com/book/despiegk/jumpscale/details', '_blank');" type="button" class="btn btn-default docButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-align-left" aria-hidden="true">Jumpscale Documentation</span>
           </button>
           <br/>
           <div class="dropdown">
           <button class="btn btn-default btn-lg dropdown-toggle  docButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Download Menu <span class="caret"></span>
+            Download<span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
             <li>
@@ -62,13 +61,13 @@
 
         <div class="divWrap">
         <i class="icon-code bigger"></i><br>
-            <button onclick="location.href='https://www.gitbook.com/book/despiegk/jumpscaleapi/details';" type="button" class="btn btn-default docButton" aria-label="Left Align">
+            <button onclick="window.open('https://www.gitbook.com/book/despiegk/jumpscaleapi/details', '_blank');"  type="button" class="btn btn-default docButton" aria-label="Left Align">
               <span class="glyphicon glyphicon-align-left" aria-hidden="true">Jumpscale API Documentation</span>
             </button>
             <br/>
             <div class="dropdown">
           <button class="btn btn-default btn-lg dropdown-toggle  docButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Download Menu <span class="caret"></span>
+            Download<span class="caret"></span>
           </button>
           <ul style="left: 56px;" class="dropdown-menu">
             <li>
