update docs links

--- a/www.jumpscale.com/themes/landing/layouts/_default/single.html
+++ b/www.jumpscale.com/themes/landing/layouts/_default/single.html
@@ -37,7 +37,7 @@ body {
       <div style="height: 100%;" class="carousel-inner slider-w">
         <div class="divWrap">
          <i class="icon-book bigger"></i><br>
-          <button onclick="window.open('https://www.gitbook.com/book/despiegk/jumpscale/details', '_blank');" type="button" class="btn btn-default docButton" aria-label="Left Align">
+          <button onclick="window.open('http://gig.gitbooks.io/jumpscale/content/', '_blank');" type="button" class="btn btn-default docButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-align-left" aria-hidden="true">Jumpscale Documentation</span>
           </button>
           <br/>
@@ -47,13 +47,10 @@ body {
           </button>
           <ul class="dropdown-menu">
             <li>
-              <a href="https://www.gitbook.com/download/pdf/book/despiegk/jumpscale">Download PDF</a>
+              <a href="https://www.gitbook.com/download/pdf/book/gig/jumpscale">Download PDF</a>
           </li>
           <li>
-              <a href="https://www.gitbook.com/download/epub/book/despiegk/jumpscale">Download EPUB</a>
-          </li>
-          <li>
-              <a href="https://www.gitbook.com/download/mobi/book/despiegk/jumpscale">Download MOBI</a>
+              <a href="https://www.gitbook.com/download/epub/book/gig/jumpscale">Download EPUB</a>
           </li>
           </ul>
           </div> 
@@ -61,7 +58,7 @@ body {
 
         <div class="divWrap">
         <i class="icon-code bigger"></i><br>
-            <button onclick="window.open('https://www.gitbook.com/book/despiegk/jumpscaleapi/details', '_blank');"  type="button" class="btn btn-default docButton" aria-label="Left Align">
+            <button onclick="window.open('http://gig.gitbooks.io/jumpscaleapi/content/', '_blank');"  type="button" class="btn btn-default docButton" aria-label="Left Align">
               <span class="glyphicon glyphicon-align-left" aria-hidden="true">Jumpscale API Documentation</span>
             </button>
             <br/>
@@ -71,13 +68,10 @@ body {
           </button>
           <ul style="left: 56px;" class="dropdown-menu">
             <li>
-              <a href="https://www.gitbook.com/download/pdf/book/despiegk/jumpscaleapi">Download PDF</a>
+              <a href="https://www.gitbook.com/download/pdf/book/gig/jumpscaleapi">Download PDF</a>
           </li>
           <li>
-              <a href="https://www.gitbook.com/download/epub/book/despiegk/jumpscaleapi">Download EPUB</a>
-          </li>
-          <li>
-              <a href="https://www.gitbook.com/download/mobi/book/despiegk/jumpscaleapi">Download MOBI</a>
+              <a href="https://www.gitbook.com/download/epub/book/gig/jumpscaleapi">Download EPUB</a>
           </li>
           </ul>
           </div> 
